--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,4 +20,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+    <Button
+        android:id="@+id/prev"
+        android:text="@string/Prev"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="goToPrev" />
+
+    <Button
+        android:id="@+id/next"
+        android:text="@string/Next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="goToNext"/>
+</LinearLayout>
+
+
+
+
+
 </LinearLayout>
